pointer a los iconos de redes

--- a/style/style.css
+++ b/style/style.css
@@ -230,6 +230,7 @@ table {
   -ms-transform: scale(1.5); 
   -webkit-transform: scale(1.5);
   transform: scale(1.5); 
+  cursor: pointer;
 }
 
 spam{
