--- a/style/style.css
+++ b/style/style.css
@@ -16,8 +16,8 @@ html {
   font-size: 10pt;
   line-height: 1.4;
   font-weight: 400;
-  font-family: 'Source Sans Pro', 'Open Sans', Roboto, 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', 'Myriad Pro', 'Segoe UI', Myriad, Helvetica, 
-  'Lucida Grande', 'DejaVu Sans Condensed', 'Liberation Sans', 'Nimbus Sans L', Tahoma, Geneva, Arial, sans-serif;
+  font-family: 'Source Sans Pro', 'Open Sans', Roboto, 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', 'Myriad Pro', 'Segoe UI', Myriad, Helvetica,
+    'Lucida Grande', 'DejaVu Sans Condensed', 'Liberation Sans', 'Nimbus Sans L', Tahoma, Geneva, Arial, sans-serif;
   -webkit-text-size-adjust: 100%;
 }
 body {
@@ -43,7 +43,7 @@ section span {
 .center{
 
   text-align:center;
-}  
+}
 
 
 header {
@@ -111,7 +111,7 @@ thead{
 
 tr:nth-child(even){
   background-color: white;
-  
+
 }
 
 tr:hover{
@@ -119,7 +119,7 @@ tr:hover{
 }
 
 .button {
-  background-color: #333; 
+  background-color: #333;
   border: none;
   color: white;
   padding: 20px 32px;
@@ -131,8 +131,8 @@ tr:hover{
 }
 
 #button-critica {
-  background-color: white; 
-  color: black; 
+  background-color: white;
+  color: black;
   border: 2px solid #996633;
   font-size: 20px;
   border-radius: 5px;
@@ -148,9 +148,9 @@ tr:hover{
 #button-container {
   text-align: center;
   font-size:30px;
-  background-color: white; 
-  color: black; 
- 
+  background-color: white;
+  color: black;
+
   font-size: 20px;
   border-radius: 5px;
   padding: 5px;
@@ -218,24 +218,29 @@ table {
 
 .gray-box {
   position: absolute;
-  z-index: 3; 
+  z-index: 3;
   background: #eee;
-  height: 60px;  
+  height: 60px;
   width: 70%;
   left: 50px;
   top: 50px;
 }
 
 .zoom:hover {
-  -ms-transform: scale(1.5); 
+  -ms-transform: scale(1.5);
   -webkit-transform: scale(1.5);
-  transform: scale(1.5); 
+  transform: scale(1.5);
   cursor: pointer;
 }
 
 spam{
   color:#996633;
 }
+
+div.uppercase {
+  text-transform: uppercase;
+}
+
 
 /*para hacer la página responsive (adaptable a tablets, moviles...) uso de media queries*/
 @media (min-width: 500px) {
