--- a/style/style.css
+++ b/style/style.css
@@ -356,3 +356,28 @@ p[href="#"]{
 
 
 }
+#contenedor1{
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  background-color:white;  
+  height: 100px;
+  color:black;
+  font-size: 1rem;
+}
+
+#item1 {  
+  flex-basis: 30%;
+  order: 0;
+  background-color: white;
+}
+#item2 {
+  flex-basis: 40%;  
+  order: 1;
+  background-color: white;
+}
+#item3 {
+  flex-basis: 30%;  
+  order: 2;
+  background-color: white;
+}
