--- a/style/style.css
+++ b/style/style.css
@@ -311,11 +311,9 @@ p[href="#"]{
   text-decoration: underline;
 }
 
-<<<<<<< HEAD
 .container-novedades-ac{
   border:1px solid #000;
-  
-=======
+}
 #contenedor1{
   display: flex;
   flex-wrap: wrap;
@@ -340,7 +338,35 @@ p[href="#"]{
   flex-basis: 30%;  
   order: 2;
   background-color: white;
->>>>>>> cc7080ec6f1e3caa9ae1fccb024680ecda92103b
+}
+
+.container-principal-novedades-stardew{
+  display: flex; 
+  height: 300px;
+  font-size:1.4rem;
+}
+
+#container-novedades-stardew-1{
+  align-self: flex-start;
+  padding: 10px;
+  margin: 3px;
+  border: solid 1px #333; 
+}
+
+#container-novedades-stardew-2{
+  flex-shrink: 2;
+  align-self: center;
+  padding: 10px;
+  margin: 3px;
+  border: solid 1px #333;
+}
+
+#container-novedades-stardew-3{
+  align-self: flex-end;
+  padding: 10px;
+  margin: 3px;
+  border: solid 1px #333;
+
 }
 
 /*para hacer la página responsive (adaptable a tablets, moviles...) uso de media queries*/
